Fixed some findbugs issues.